<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="8dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/candal"
                android:text="@string/additem"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="@+id/backButton" />

            <EditText
                android:id="@+id/enterFoodName"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittextshape"
                android:elevation="5dp"
                android:fontFamily="@font/latoregular"
                android:hint="@string/enterfoodname"
                android:inputType="text"
                android:outlineSpotShadowColor="@color/textcolor"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/enterFoodPrice"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edittextshape"
                android:elevation="5dp"
                android:fontFamily="@font/latoregular"
                android:hint="@string/enterfoodprice"
                android:inputType="text"
                android:outlineSpotShadowColor="@color/textcolor"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/enterFoodName"
                app:layout_constraintStart_toStartOf="@+id/enterFoodName"
                app:layout_constraintTop_toBottomOf="@+id/enterFoodName" />

            <TextView
                android:id="@+id/selectImage"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittextshape"
                android:drawableRight="@drawable/pluse_round"
                android:elevation="5dp"
                android:fontFamily="@font/candal"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/selectimage"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterFoodPrice"
                tools:text="@string/selectimage" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@id/selectImage"
                app:layout_constraintStart_toStartOf="@+id/selectImage"
                app:layout_constraintTop_toBottomOf="@+id/selectImage">

                <ImageView
                    android:id="@+id/selectedImage"
                    android:layout_width="175dp"
                    android:layout_height="110dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/addimage" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/candal"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/shortdesc"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/selectImage"
                app:layout_constraintTop_toBottomOf="@+id/cardView8" />

            <EditText
                android:id="@+id/foodDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/latoregular"
                android:hint="Enter Food Description Here"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView17"
                app:layout_constraintHorizontal_bias="0.055"

                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="157dp"
                android:layout_height="57dp"
                android:background="@drawable/greenbutton"
                android:fontFamily="@font/candal"
                android:text="@string/additem"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>